--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <app-header></app-header>
-<hr>
 <h1> Angular  App {{ title }}</h1>
 
 <div>
   <input placeholder="Type your name" [(ngModel)]="name">
 </div>
 <p>Your name is : {{name}}</p>
+<app-home></app-home>
+<app-footer></app-footer>
 
