--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<header>
+  <div id="brand">
+    {{ heading }}
+  </div>
+  <div id="social">
+    <button class="social-icon"> Hello </button>
+  </div>
+</header>
