--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,5 +23,5 @@
   </div>
   <app-child [items]="itemList" (selectedItemEvent)="onSelctedItem($event)"></app-child>
    <p> Selected Item: {{ selectedItem }}</p>
-
+  <p appMydirective>My Directive code show </p>
 </div>
