--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div id="brand">
-    {{ heading | uppercase }}
+    {{ heading | myupper: 'lower' }}
   </div>
   <div id="social">
     <button class="social-icon"> Hello </button>
