--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,4 +24,6 @@
   <app-child [items]="itemList" (selectedItemEvent)="onSelctedItem($event)"></app-child>
    <p> Selected Item: {{ selectedItem }}</p>
   <p appMydirective>My Directive code show </p>
+
+  <button (click)="addNewItem()">Add Item</button>
 </div>
