--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <app-header></app-header>
-<h1> Angular  App {{ title }}</h1>
-
-<div>
-  <input placeholder="Type your name" [(ngModel)]="name">
-</div>
-<p>Your name is : {{name}}</p>
-<app-home></app-home>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 
