Getting started with Angular 17

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
     @if (superAdmin) {
   <button>Super Admin</button> &nbsp;
       <button> Admin</button>
+      <button (click)="gotoCource()">Course</button>
     } @else if(Admin) {
  <button> Admin</button>
     }
