Angular 17 http client

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 <app-footer></app-footer>
 
  -->
+<app-http-client></app-http-client>
 
-
- <app-rxjs-tutorial></app-rxjs-tutorial>
+ <!-- <app-rxjs-tutorial></app-rxjs-tutorial> -->
