--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,5 @@
 <app-footer></app-footer>
 
  -->
-<app-http-client></app-http-client>
-
+<app-form-array></app-form-array>
  <!-- <app-rxjs-tutorial></app-rxjs-tutorial> -->
